<resources>
    <string name="app_name">Video Meeting App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to">Welcome To</string>
    <string name="video_meeting_conference_app">Video Meeting | Conference App</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="you_example_com">you@example.com</string>
    <string name="password">Password</string>
    <string name="u2022_u2022_u2022_u2022_u2022_u2022">• • • • • •</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_need_a_few_details_to_create_your_account">We need a few details to create your account</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="john">John</string>
    <string name="last_name">Last Name</string>
    <string name="dou">Dou</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_out">Sign out</string>
    <string name="remember_me">Remember me</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="outgoing_meeting_invitation">Outgoing Meeting Invitation</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
</resources>