<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <ScrollView
        android:id="@+id/signInLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:background="@color/primary"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_to"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_meeting_conference_app"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/sign_in_to_your_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />

                    <EditText
                        android:id="@+id/edtEmailSignIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:hint="@string/you_example_com"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_15ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />

                    <EditText
                        android:id="@+id/edtPasswordSignIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:hint="@string/u2022_u2022_u2022_u2022_u2022_u2022"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_15ssp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <CheckBox
                android:id="@+id/cbRemember"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:buttonTint="@color/primary"
                android:text="@string/remember_me"
                android:textSize="@dimen/_13ssp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/primary"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp" />

                <ProgressBar
                    android:id="@+id/progressSignIn"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/accent"
                    android:visibility="invisible" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_2sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_2sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/accent"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>