<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/signUpFragment"
    tools:context=".fragments.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/primary"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_information"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_50sdp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_4sdp"
                android:layout_margin="@dimen/_8sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:paddingHorizontal="@dimen/_8sdp"/>

                    <EditText
                        android:id="@+id/edtFirstNameSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:hint="@string/john"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_15ssp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:paddingHorizontal="@dimen/_8sdp"/>

                    <EditText
                        android:id="@+id/edtLastNameSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:hint="@string/dou"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_15ssp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:paddingHorizontal="@dimen/_8sdp"/>

                    <EditText
                        android:id="@+id/edtEmailSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:hint="@string/you_example_com"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_15ssp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:paddingHorizontal="@dimen/_8sdp"/>

                    <EditText
                        android:id="@+id/edtPasswordSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:hint="@string/u2022_u2022_u2022_u2022_u2022_u2022"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_15ssp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:paddingHorizontal="@dimen/_8sdp"/>

                    <EditText
                        android:id="@+id/edtConfirmPasswordSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:hint="@string/u2022_u2022_u2022_u2022_u2022_u2022"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_15ssp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_50sdp"
                    android:backgroundTint="@color/primary"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:paddingHorizontal="@dimen/_8sdp"/>

                <ProgressBar
                    android:id="@+id/progressSignUp"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/accent"
                    android:visibility="invisible"/>

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:layout_marginTop="@dimen/_2sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textColor="@color/accent"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_2sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>